// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for backend-full 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

name: Deploy to Production

on:
  push:
    branches:
      - production

env:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myapi

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myapi
            
            # Guardar imagen actual para rollback
            CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
            echo "Current image: $CURRENT_IMAGE"
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Ejecutar migraciones
            docker compose exec -T app php artisan migrate --force
            
            # Limpiar caches
            docker compose exec -T app php artisan config:clear
            docker compose exec -T app php artisan route:clear
            docker compose exec -T app php artisan view:clear
            docker compose exec -T app php artisan cache:clear
            
            # Healthcheck
            HEALTH_URL="https://api.example.com/health"
            echo "Checking health at $HEALTH_URL"
            
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                exit 0
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            echo "✗ Healthcheck failed after 30 attempts"
            
            # Rollback a la imagen anterior
            if [ "$CURRENT_IMAGE" != "none" ]; then
              echo "Rolling back to previous image..."
              docker compose down
              # Restaurar imagen anterior (requiere tag versionado previo)
              PREVIOUS_TAG=$(docker images ghcr.io/\${{ github.repository }}/myapi --format "{{.Tag}}" | grep -v latest | head -n 1)
              if [ -n "$PREVIOUS_TAG" ]; then
                export IMAGE_TAG=$PREVIOUS_TAG
                docker compose up -d
                echo "Rolled back to $PREVIOUS_TAG"
              fi
            fi
            
            exit 1
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://api.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for frontend-static 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

name: Deploy to Production

on:
  push:
    branches:
      - main

env:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myweb

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myweb
            
            # Guardar imagen actual para rollback
            CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
            echo "Current image: $CURRENT_IMAGE"
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Healthcheck
            HEALTH_URL="https://app.example.com/"
            echo "Checking health at $HEALTH_URL"
            
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                exit 0
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            echo "✗ Healthcheck failed after 30 attempts"
            
            # Rollback a la imagen anterior
            if [ "$CURRENT_IMAGE" != "none" ]; then
              echo "Rolling back to previous image..."
              docker compose down
              # Restaurar imagen anterior (requiere tag versionado previo)
              PREVIOUS_TAG=$(docker images ghcr.io/\${{ github.repository }}/myweb --format "{{.Tag}}" | grep -v latest | head -n 1)
              if [ -n "$PREVIOUS_TAG" ]; then
                export IMAGE_TAG=$PREVIOUS_TAG
                docker compose up -d
                echo "Rolled back to $PREVIOUS_TAG"
              fi
            fi
            
            exit 1
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://app.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for multirepo api 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

name: Deploy to Production

on:
  push:
    branches:
      - production

env:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myapi

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myapi
            
            # Guardar imagen actual para rollback
            CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
            echo "Current image: $CURRENT_IMAGE"
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Ejecutar migraciones
            docker compose exec -T app php artisan migrate --force
            
            # Limpiar caches
            docker compose exec -T app php artisan config:clear
            docker compose exec -T app php artisan route:clear
            docker compose exec -T app php artisan view:clear
            docker compose exec -T app php artisan cache:clear
            
            # Healthcheck
            HEALTH_URL="https://api.example.com/health"
            echo "Checking health at $HEALTH_URL"
            
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                exit 0
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            echo "✗ Healthcheck failed after 30 attempts"
            
            # Rollback a la imagen anterior
            if [ "$CURRENT_IMAGE" != "none" ]; then
              echo "Rolling back to previous image..."
              docker compose down
              # Restaurar imagen anterior (requiere tag versionado previo)
              PREVIOUS_TAG=$(docker images ghcr.io/\${{ github.repository }}/myapi --format "{{.Tag}}" | grep -v latest | head -n 1)
              if [ -n "$PREVIOUS_TAG" ]; then
                export IMAGE_TAG=$PREVIOUS_TAG
                docker compose up -d
                echo "Rolled back to $PREVIOUS_TAG"
              fi
            fi
            
            exit 1
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://api.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitHub Actions > should generate consistent workflow for multirepo web 1`] = `
"# Workflow de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

name: Deploy to Production

on:
  push:
    branches:
      - main

env:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: ghcr.io/\${{ github.repository }}/myweb

jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    timeout-minutes: 10
    
    steps:
      - name: Checkout code
        uses: actions/checkout@v4

      - name: Set up Docker Buildx
        uses: docker/setup-buildx-action@v3

      - name: Log in to GitHub Container Registry
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ secrets.DOCKER_REGISTRY_USER }}
          password: \${{ secrets.DOCKER_REGISTRY_TOKEN }}

      - name: Build and push Docker image
        uses: docker/build-push-action@v5
        with:
          context: .
          push: true
          tags: |
            \${{ env.IMAGE_NAME }}:\${GITHUB_SHA:0:7}
            \${{ env.IMAGE_NAME }}:latest
          cache-from: type=registry,ref=\${{ env.IMAGE_NAME }}:latest
          cache-to: type=inline

      - name: Deploy to server
        env:
          SSH_HOST: \${{ secrets.SSH_HOST }}
          SSH_USER: \${{ secrets.SSH_USER }}
          SSH_PRIVATE_KEY: \${{ secrets.SSH_PRIVATE_KEY }}
          SSH_KNOWN_HOSTS: \${{ secrets.SSH_KNOWN_HOSTS }}
          IMAGE_TAG: \${GITHUB_SHA:0:7}
        run: |
          # Configurar SSH con host key verification
          echo "$SSH_PRIVATE_KEY" > deploy_key
          chmod 600 deploy_key
          
          mkdir -p ~/.ssh
          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
          chmod 644 ~/.ssh/known_hosts
          
          # Deploy al servidor (IMAGE_TAG ya está en env)
          ssh -o StrictHostKeyChecking=yes -i deploy_key $SSH_USER@$SSH_HOST << ENDSSH
            set -e
            
            cd /var/www/myweb
            
            # Guardar imagen actual para rollback
            CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
            echo "Current image: $CURRENT_IMAGE"
            
            # Actualizar compose con nueva imagen
            export IMAGE_TAG=$IMAGE_TAG
            docker compose pull
            docker compose up -d --no-build
            
            # Esperar que los contenedores estén listos
            sleep 10
            
            # Healthcheck
            HEALTH_URL="https://app.example.com/"
            echo "Checking health at $HEALTH_URL"
            
            for i in {1..30}; do
              HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
              if [ "$HTTP_CODE" = "200" ]; then
                echo "✓ Healthcheck passed"
                exit 0
              fi
              echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
              sleep 2
            done
            
            echo "✗ Healthcheck failed after 30 attempts"
            
            # Rollback a la imagen anterior
            if [ "$CURRENT_IMAGE" != "none" ]; then
              echo "Rolling back to previous image..."
              docker compose down
              # Restaurar imagen anterior (requiere tag versionado previo)
              PREVIOUS_TAG=$(docker images ghcr.io/\${{ github.repository }}/myweb --format "{{.Tag}}" | grep -v latest | head -n 1)
              if [ -n "$PREVIOUS_TAG" ]; then
                export IMAGE_TAG=$PREVIOUS_TAG
                docker compose up -d
                echo "Rolled back to $PREVIOUS_TAG"
              fi
            fi
            
            exit 1
ENDSSH
          
          rm -f deploy_key

      - name: Notify deployment status
        if: always()
        run: |
          if [ \${{ job.status }} == 'success' ]; then
            echo "✓ Deploy exitoso a https://app.example.com"
          else
            echo "✗ Deploy falló, ver logs arriba"
          fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for backend-full 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

variables:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myapi
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - production
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - production
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myapi
        
        # Guardar imagen actual para rollback
        CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
        echo "Current image: $CURRENT_IMAGE"
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Ejecutar migraciones
        docker compose exec -T app php artisan migrate --force
        
        # Limpiar caches
        docker compose exec -T app php artisan config:clear
        docker compose exec -T app php artisan route:clear
        docker compose exec -T app php artisan view:clear
        docker compose exec -T app php artisan cache:clear
        
        # Healthcheck
        HEALTH_URL="https://api.example.com/health"
        echo "Checking health at $HEALTH_URL"
        
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            exit 0
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        echo "✗ Healthcheck failed after 30 attempts"
        
        # Rollback a la imagen anterior
        if [ "$CURRENT_IMAGE" != "none" ]; then
          echo "Rolling back to previous image..."
          docker compose down
          # Restaurar imagen anterior (requiere tag versionado previo)
          PREVIOUS_TAG=$(docker images $CI_REGISTRY_IMAGE/myapi --format "{{.Tag}}" | grep -v latest | head -n 1)
          if [ -n "$PREVIOUS_TAG" ]; then
            export IMAGE_TAG=$PREVIOUS_TAG
            docker compose up -d
            echo "Rolled back to $PREVIOUS_TAG"
          fi
        fi
        
        exit 1
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://api.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for frontend-static 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

variables:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myweb
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - main
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - main
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myweb
        
        # Guardar imagen actual para rollback
        CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
        echo "Current image: $CURRENT_IMAGE"
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Healthcheck
        HEALTH_URL="https://app.example.com/"
        echo "Checking health at $HEALTH_URL"
        
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            exit 0
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        echo "✗ Healthcheck failed after 30 attempts"
        
        # Rollback a la imagen anterior
        if [ "$CURRENT_IMAGE" != "none" ]; then
          echo "Rolling back to previous image..."
          docker compose down
          # Restaurar imagen anterior (requiere tag versionado previo)
          PREVIOUS_TAG=$(docker images $CI_REGISTRY_IMAGE/myweb --format "{{.Tag}}" | grep -v latest | head -n 1)
          if [ -n "$PREVIOUS_TAG" ]; then
            export IMAGE_TAG=$PREVIOUS_TAG
            docker compose up -d
            echo "Rolled back to $PREVIOUS_TAG"
          fi
        fi
        
        exit 1
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://app.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for multirepo api 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myapi
# Target: backend-full

variables:
  PROJECT_NAME: myapi
  DOMAIN: api.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myapi
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - production
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - production
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myapi
        
        # Guardar imagen actual para rollback
        CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
        echo "Current image: $CURRENT_IMAGE"
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Ejecutar migraciones
        docker compose exec -T app php artisan migrate --force
        
        # Limpiar caches
        docker compose exec -T app php artisan config:clear
        docker compose exec -T app php artisan route:clear
        docker compose exec -T app php artisan view:clear
        docker compose exec -T app php artisan cache:clear
        
        # Healthcheck
        HEALTH_URL="https://api.example.com/health"
        echo "Checking health at $HEALTH_URL"
        
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            exit 0
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        echo "✗ Healthcheck failed after 30 attempts"
        
        # Rollback a la imagen anterior
        if [ "$CURRENT_IMAGE" != "none" ]; then
          echo "Rolling back to previous image..."
          docker compose down
          # Restaurar imagen anterior (requiere tag versionado previo)
          PREVIOUS_TAG=$(docker images $CI_REGISTRY_IMAGE/myapi --format "{{.Tag}}" | grep -v latest | head -n 1)
          if [ -n "$PREVIOUS_TAG" ]; then
            export IMAGE_TAG=$PREVIOUS_TAG
            docker compose up -d
            echo "Rolled back to $PREVIOUS_TAG"
          fi
        fi
        
        exit 1
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://api.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;

exports[`Workflow Snapshots > GitLab CI > should generate consistent pipeline for multirepo web 1`] = `
"# Pipeline de deploy generado por Fractal
# Generado: NORMALIZED_TIMESTAMP
# Proyecto: myweb
# Target: frontend-static

variables:
  PROJECT_NAME: myweb
  DOMAIN: app.example.com
  IMAGE_NAME: $CI_REGISTRY_IMAGE/myweb
  DOCKER_DRIVER: overlay2

stages:
  - build
  - deploy

build:
  stage: build
  image: docker:24
  services:
    - docker:24-dind
  only:
    - main
  before_script:
    - docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_TOKEN $CI_REGISTRY
  script:
    - docker build -t $IMAGE_NAME:$CI_COMMIT_SHORT_SHA -t $IMAGE_NAME:latest .
    - docker push $IMAGE_NAME:$CI_COMMIT_SHORT_SHA
    - docker push $IMAGE_NAME:latest

deploy:
  stage: deploy
  image: alpine:latest
  only:
    - main
  timeout: 10 minutes
  before_script:
    - apk add --no-cache openssh-client curl
    - eval $(ssh-agent -s)
    - echo "$SSH_PRIVATE_KEY" | tr -d '\\r' | ssh-add -
    - mkdir -p ~/.ssh
    - chmod 700 ~/.ssh
    - echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
    - chmod 644 ~/.ssh/known_hosts
  script:
    - |
      ssh -o StrictHostKeyChecking=yes $SSH_USER@$SSH_HOST << ENDSSH
        set -e
        
        cd /var/www/myweb
        
        # Guardar imagen actual para rollback
        CURRENT_IMAGE=$(docker compose images -q app 2>/dev/null || echo "none")
        echo "Current image: $CURRENT_IMAGE"
        
        # Actualizar compose con nueva imagen (IMAGE_TAG pasa desde CI)
        export IMAGE_TAG=$CI_COMMIT_SHORT_SHA
        docker compose pull
        docker compose up -d --no-build
        
        # Esperar que los contenedores estén listos
        sleep 10
        
        # Healthcheck
        HEALTH_URL="https://app.example.com/"
        echo "Checking health at $HEALTH_URL"
        
        for i in $(seq 1 30); do
          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_URL || echo "000")
          if [ "$HTTP_CODE" = "200" ]; then
            echo "✓ Healthcheck passed"
            exit 0
          fi
          echo "Attempt $i/30: HTTP $HTTP_CODE, retrying..."
          sleep 2
        done
        
        echo "✗ Healthcheck failed after 30 attempts"
        
        # Rollback a la imagen anterior
        if [ "$CURRENT_IMAGE" != "none" ]; then
          echo "Rolling back to previous image..."
          docker compose down
          # Restaurar imagen anterior (requiere tag versionado previo)
          PREVIOUS_TAG=$(docker images $CI_REGISTRY_IMAGE/myweb --format "{{.Tag}}" | grep -v latest | head -n 1)
          if [ -n "$PREVIOUS_TAG" ]; then
            export IMAGE_TAG=$PREVIOUS_TAG
            docker compose up -d
            echo "Rolled back to $PREVIOUS_TAG"
          fi
        fi
        
        exit 1
ENDSSH
  after_script:
    - |
      if [ $CI_JOB_STATUS == 'success' ]; then
        echo "✓ Deploy exitoso a https://app.example.com"
      else
        echo "✗ Deploy falló, ver logs arriba"
      fi
"
`;
